WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23855
Fix TransformationMatrixSkia.cpp and GraphicsContextSkia.cpp bustage
https://bugs.webkit.org/show_bug.cgi?id=23855
Summary
Fix TransformationMatrixSkia.cpp and GraphicsContextSkia.cpp bustage
Darin Fisher (:fishd, Google)
Reported
2009-02-09 14:39:09 PST
Fix TransformationMatrixSkia.cpp and GraphicsContextSkia.cpp bustage Resulting from:
http://trac.webkit.org/changeset/40761
Attachments
v1 patch
(7.04 KB, patch)
2009-02-09 15:06 PST
,
Darin Fisher (:fishd, Google)
eric
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Fisher (:fishd, Google)
Comment 1
2009-02-09 15:06:11 PST
Created
attachment 27495
[details]
v1 patch Brett reviewed this upstream:
http://codereview.chromium.org/21184
Eric Seidel (no email)
Comment 2
2009-02-09 15:17:40 PST
Comment on
attachment 27495
[details]
v1 patch Looks fine.
Darin Fisher (:fishd, Google)
Comment 3
2009-02-10 00:13:18 PST
http://trac.webkit.org/changeset/40809
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug