2009-02-09  Darin Fisher  <darin@chromium.org>

Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=23855
        Fix TransformationMatrixSkia.cpp and GraphicsContextSkia.cpp bustage

        * platform/graphics/skia/GraphicsContextSkia.cpp:
        (WebCore::GraphicsContext::getCTM):
        * platform/graphics/skia/TransformationMatrixSkia.cpp:
        (WebCore::TransformationMatrix::operator SkMatrix):



Canonical link: https://commits.webkit.org/32935@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40809 268f45cc-cd09-0410-ab3c-d52691b4dbfc